@@ -1,6 +1,7 @@
 package com.aleluiaeventos.dslist.services;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -8,8 +9,9 @@ import org.springframework.stereotype.Service;
 import com.aleluiaeventos.dslist.dto.GameListDTO;
 import com.aleluiaeventos.dslist.entities.GameList;
 import com.aleluiaeventos.dslist.repositories.GameListRepository;
+import org.springframework.transaction.annotation.Transactional;
 
-import jakarta.transaction.Transactional;
+
 
 
 @Service
@@ -23,10 +25,10 @@ public class GameListService {
     @Transactional(readOnly = true)
     public List<GameListDTO> findAll(){
        List<GameList> result = gameListRepository.findAll();
-       return result.stream().map(x -> new GameListDTO(x)).toList();
-    
-        
+       return result.stream().map(GameListDTO::new)
+                 .collect(Collectors.toList());    
     }
 
 }
 
+ 
